# digger

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp
include/: audio_manager.hpp  collision.hpp  collision_manager.hpp  explosion.hpp  game.hpp  health_bar.hpp  icollidable.hpp  input_manager.hpp  itransformable.hpp  iupdatable.hpp  ore.hpp  player.hpp  rock.hpp  sound.hpp  sprite_renderer.hpp  texture_manager.hpp  transform.hpp  utils.hpp
scr/: audio_manager.cpp  collision.cpp  collision_manager.cpp  explosion.cpp  game.cpp  health_bar.cpp  input_manager.cpp  ore.cpp  player.cpp  rock.cpp  sound.cpp  sprite_renderer.cpp  texture_manager.cpp  transform.cpp  utils.cpp
